Adicionada documentação de api Open API 3.0
