# src/app/Http/Controllers/ProductController.php
@@ -32,7 +32,7 @@ class ProductController extends Controller
         $to_update_product->url = $request->input('url');
         $to_update_product->creator = $request->input('creator');
         $to_update_product->product_name = $request->input('product_name');
-        $to_update_product->quantity = intval($request->input('quantity'));
+        $to_update_product->quantity = $request->input('quantity');
         $to_update_product->brands = $request->input('brands');
         $to_update_product->categories = $request->input('categories');
         $to_update_product->labels = $request->input('labels');
